@@ -1,3 +1,6 @@
+14.mar (ws)
+      - add preference value for audio export sample rate
+      - fix audio export
 13.mar (ws)
       - #9731: fix backward compatibility for latest changes in clef handling
 11.mar (ws)
